# dynobench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  build_wheels.sh  format.bash  install_all_docker.sh  setup.py  test_yaml_json2.yaml  test_yaml_json3.yaml  tets_yaml_json.yaml  tmp.yaml  tmp2.yaml
.github/workflows/: build_test.yml  cmake.yml
cmake/: dynobenchConfig.cmake.in
dynobench/: __init__.py  hello.py
dynobench/envs/multirobot/: swap1_trailer_db.yaml
dynobench/envs/quad2d_v0/: quad2d_recovery_obs.yaml
dynobench/envs/quad2dpole_v0/: up_obs.yaml  window_hard.yaml
dynobench/envs/quad3d_payload/: empty1_2_pm_easy.yaml  empty_0.yaml  empty_1.yaml
dynobench/envs/quadrotor_v1/: empty_0_easy.yaml  recovery_with_obs.yaml
dynobench/envs/unicycle1_v0/: kink_0.yaml
dynobench/envs/unicycle1_v1/: kink_0.yaml
dynobench/envs/unicycle1_v2/: wall_0.yaml
dynobench/envs/unicycle2_v0/: bugtrap_0.yaml
dynobench/models/: integrator1_2d_v0.yaml  integrator2_2d_v0.yaml  integrator2_3d_v0.yaml  point_4.yaml  quad3dpayload.yaml  quad3dpayload_r.yaml  unicycle_second_order_0.yaml
dynobench/test/: test_1.py
dynobench/utils/sympy/: helper.py
dynobench/utils/viewer/: acrobot_collisions.py  car_with_trailer_viewer.py  how_to_viewer.md  integrator2_2d_viewer.py  quad2d_viewer.py  quad2dpole_viewer.py  quad3d_collisions.py  quad3d_viewer.py  quad3dpayload_viewer.py  robot_viewer.py  test_uav.py  unicycle1_viewer.py  viewer_cli.py  viewer_utils.py
envs/acrobot_v0/motions/: acrobot_v0_all2.bin.sp.bin.small.msgpack
envs/acrobot_v0/swing_down/: idbastar_v0_solution_v0.yaml  rrt_to_v0_guess_v0.yaml  rrt_to_v0_solution_v0.yaml
envs/acrobot_v0/swing_down_easy/: idbastar_v0_db_solution_v0.yaml  idbastar_v0_opt_solution_v0.yaml  idbastar_v0_solution_v0.yaml  rrt_to_v0_guess_v0.yaml
envs/acrobot_v0/swing_up_empty/: idbastar_v0_db_solution_v0.yaml  idbastar_v0_solution_v0.yaml  rrt_to_v0_guess_v0.yaml
envs/acrobot_v0/swing_up_obs/: rrt_to_v0_guess_v0.yaml  rrt_to_v0_solution_v0.yaml
envs/acrobot_v0/swing_up_obs_hard/: idbastar_v0_opt_solution_v0.yaml  rrt_to_v0_guess_v0.yaml  rrt_to_v0_solution_v0.yaml
envs/car1_v0/: bugtrap_0.yaml  bugtrap_double.yaml  empty.yaml  kink_0.yaml  narrow_passage.yaml  parallelpark_0.yaml
envs/car1_v0/bugtrap_0/: idbastar_v0_opt_solution_v0.yaml  idbastar_v0_solution_v0.yaml  (+1 more)
envs/integrator1_2d_v0/: empty.yaml
envs/integrator2_2d_v0/: empty.yaml  park.yaml
envs/multirobot/: guess_indiv_straight.yaml
envs/multirotor2d_v0_ERASE_ME/: quad2d_recovery_obs.yaml
envs/quad2d_v0/: narrow_passage.yaml  quad2d_recovery_obs.yaml  quad2d_recovery_obs_double.yaml  quad_bugtrap_double.yaml
envs/quad2dpole_v0/: up_obs2.yaml  window_hard.yaml  window_hard2.yaml
envs/quad3d_payload/: empty0_2_pm_easy.yaml  empty1_2_pm_easy.yaml  empty_0.yaml  empty_0_2_pm.yaml  empty_1.yaml  obs_0.yaml
envs/quadrotor_v0/: bugtrap.yaml  bugtrap2.yaml  bugtrap3.yaml  empty_1_easy.yaml  narrow_recovery.yaml  recovery_with_obs.yaml  recovery_with_obs2.yaml  recovery_with_obs3.yaml  recovery_with_obs4.yaml  window.yaml  window_double.yaml
envs/quadrotor_v1/: bugtrap3.yaml  empty_1_easy.yaml  quad_one_obs.yaml  recovery.yaml  recovery_with_obs4.yaml  window.yaml  window_double.yaml  window_double2.yaml
envs/unicycle1_v0/: bugtrap_0.yaml  bugtrap_double.yaml  narrow_passage.yaml  parallelpark_0.yaml
envs/unicycle1_v2/: wall_0.yaml
envs/unicycle2_v0/: bugtrap_double.yaml  narrow_passage.yaml
example/: check_cols.py  check_cols_quad3d.py  robot.py  test_quad3dpayload_n.py  test_robot.py
include/dynobench/: acrobot.hpp  car.hpp  car2.hpp  croco_macros.hpp  dyno_macros.hpp  eigen_conversions.hpp  for_each_macro.hpp  general_utils.hpp  integrator1_2d.hpp  integrator2_2d.hpp  integrator2_2d_coupled.hpp  integrator2_3d.hpp  joint_robot.hpp  math_utils.hpp  motions.hpp  multirobot_trajectory.hpp  planar_rotor.hpp  planar_rotor_pole.hpp  quadrotor.hpp  quadrotor_payload.hpp  quadrotor_payload_n.hpp  robot_models.hpp  robot_models_base.hpp  tojson.hpp  unicycle1.hpp  unicycle2.hpp  unicycle_sphere.hpp
models/: car_first_order_with_1_trailers_0.yaml  double_integrator_0.yaml  integrator2_2d_v0.yaml  integrator2_3d_v0.yaml  point.yaml  point_2.yaml  point_3.yaml  point_4.yaml  point_5.yaml  point_6.yaml  quad2dpole_v0.yaml  quad3dpayload_p.yaml  unicycle1_sphere_v0.yaml  unicycle1_v0J.yaml  unicycle_first_order_0.yaml  unicycle_first_order_0_sphere.yaml
src/: acrobot.cpp  car.cpp  car2.cpp  check_trajectory.cpp  check_trajectory_multirobot.cpp  integrator1_2d.cpp  integrator2_2d.cpp  integrator2_2d_coupled.cpp  integrator2_3d.cpp  joint_robot.cpp  model_robot_python_bindings.cpp  motions.cpp  planar_rotor.cpp  planar_rotor_pole.cpp  quadpole_acceleration_auto.h  quadrotor.cpp  quadrotor_payload.cpp  quadrotor_payload_dynamics_autogen.hpp  quadrotor_payload_dynamics_autogen_n2_p.cpp  quadrotor_payload_dynamics_autogen_n2_p.hpp  quadrotor_payload_dynamics_autogen_n3_b.hpp  quadrotor_payload_dynamics_autogen_n3_p.cpp  quadrotor_payload_dynamics_autogen_n3_p.hpp  quadrotor_payload_dynamics_autogen_n4_p.cpp  quadrotor_payload_dynamics_autogen_n4_p.hpp  quadrotor_payload_dynamics_autogen_n5_p.hpp  quadrotor_payload_dynamics_autogen_n5_p_fake.cpp  quadrotor_payload_dynamics_autogen_n6_p.hpp  quadrotor_payload_dynamics_autogen_n6_p_fake.cpp  quadrotor_payload_n.cpp  robot_models.cpp  robot_models_base.cpp  unicycle1.cpp  unicycle2.cpp  unicycle_sphere.cpp
test/: CMakeLists.txt  test_base.cpp  test_check_trajectory.cpp  test_hello_world.cpp  test_models.cpp  test_quadrotor_payload.cpp
use_dynobench/: CMakeLists.txt  main.cpp  readme.md
utils/sympy/: helper.py  readme.md
utils/viewer/: acrobot_viewer.py  car_collisions.py  how_to_viewer.md  integrator1_2d_viewer.py  integrator2_2d_viewer.py  quad2d_viewer.py  quad2dpole_viewer.py  quad3d_viewer.py  quad3dpayload_viewer.py  readme.md  robot_viewer.py  unicycle1_collisions.py  unicycle2_viewer.py  view_motions.py  viewer_cli.py  viewer_test.py  viewer_utils.py
(+299 files in other folders)
